2014-12-07 Marco Giammarini <m.giammarini@warcomeb.it>

    * Ultimata l'implementazione per effettuare la ricerca nelle attivita'.

    * Alcuni fix generici sia nelle classi Activity che in quelle Employee.

2014-12-06 Marco Giammarini <m.giammarini@warcomeb.it>

    * Cambiata la funzione setOwners di ActivityNoteDialog.

    * Implementata la parte grafica della ricerca nelle attivita'.

2014-12-05 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunto il pulsante 'Add Note' nell'activity dialog e la relativa gestione.

2014-12-04 Marco Giammarini <m.giammarini@warcomeb.it>

    * Sistemata la gestione dell'aggiornamento del dialog activity sulla base delle informazioni ricevute. Ora e' tutto incapsulato.

    * Sistemato un bug relativo alla multipla connessione del pulsante view activity che veniva chiamato piu' volte.

    * Aggiunta la connessione tra i pulsanti edit e delete delle note ed il relativo controllo.

    * Aggiornato il metodo di trasferimento dell'utente loggato ai vari controlli.

    * Aggiunta la funzione getNote nella classe ActivityDatabase.

    * Aggiunta la funzione updateNote nella classe ActivityDatabase.

    * Gestita e testata la parte di modifica delle note.

    * Aggiunta la licenza ed il file per il log delle versioni dato che siamo prossimi alla 0.1.0.

    * Aggiunta la gestione dell'eliminazione di una nota.

2014-11-27 Marco Giammarini <m.giammarini@warcomeb.it>

    * Aggiunta la logica di gestione per la visualizzazione delle note. Il sistema è funzionante ma c'e' da rendere piu' ermetico il codice.

2014-11-14 Marco Giammarini <m.giammarini@warcomeb.it>

    * Piccolo fix nella funzione getEmployeeByLogin che restituiva un id non vero.

    * Aggiunta la finestra di dialog per visualizzare una nota. Per ora solo in versione Add.

    * Aggiunta tutta la logica di gestione dell'aggiunta di una nota ad una attivita'.

2014-11-07 Marco Giammarini <m.giammarini@warcomeb.it>
