@@ -1,3 +1,7 @@
+2014-12-08 Marco Giammarini <m.giammarini@warcomeb.it>
+
+    * Aggiungere il cambio dei nomi dei pulsanti in base a come si apre ogni dialog.
+
 2014-12-07 Marco Giammarini <m.giammarini@warcomeb.it>
 
     * Ultimata l'implementazione per effettuare la ricerca nelle attivita'.
